--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="grey">#CECECE</color>
+    <color name="darkGrey">#706C6C</color>
+    <color name="pink">#FF5B5A</color>
+    <color name="orange">#F69C61</color>
 </resources>
