--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="darkGrey">#706C6C</color>
     <color name="pink">#FF5B5A</color>
     <color name="orange">#F69C61</color>
+    <color name="orangeLight">#68F5AD7E</color>
 </resources>
