--- a/app/src/main/res/layout/adapter_artist_view.xml
+++ b/app/src/main/res/layout/adapter_artist_view.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clContainer"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_margin="15dp">
+    android:layout_height="100dp"
+    android:layout_margin="10dp"
+    android:padding="5dp"
+    android:background="@drawable/bg_white_round_corners">
 
     <ImageView
         android:id="@+id/imageViewAvatar"
-        android:layout_width="60dp"
-        android:layout_height="0dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,19 +25,21 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:textStyle="bold"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageViewAvatar"
         tools:text="Artist name" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textViewPlayCount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textViewName"
-        app:layout_constraintTop_toBottomOf="@+id/textViewName"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"
         android:text="@string/number_of_reproductions"
         tools:text="Playcounts" />
 
