--- a/app/src/main/res/layout/view_custom_search.xml
+++ b/app/src/main/res/layout/view_custom_search.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/orangeLight">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -14,7 +15,7 @@
 
         <EditText
             android:id="@+id/editTextSearch"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="45dp"
             android:background="@android:color/transparent"
             android:hint="@string/enter_text_here"
