--- a/app/src/main/res/navigation/nav_singers.xml
+++ b/app/src/main/res/navigation/nav_singers.xml
@@ -24,6 +24,21 @@
         <argument
             android:name="artistMbid"
             app:argType="string" />
+        <action
+            android:id="@+id/action_artistDetailFragment_to_artistWebViewFragment"
+            app:destination="@id/artistWebViewFragment"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/slide_in_left"/>
+
+    </fragment>
+    <fragment
+        android:id="@+id/artistWebViewFragment"
+        android:name="com.ari.singersapp.ui.view.ArtistWebViewFragment"
+        android:label="Artist Info"
+        tools:layout="@layout/fragment_artist_web_view">
+        <argument
+            android:name="artistUrl"
+            app:argType="string" />
 
     </fragment>
 </navigation>
