--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,16 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="blackSemi">#36000000</color>
     <color name="white">#FFFFFFFF</color>
-
     <color name="grey">#CECECE</color>
     <color name="darkGrey">#706C6C</color>
     <color name="pink">#FF5B5A</color>
     <color name="orange">#F69C61</color>
     <color name="orangeLight">#68F5AD7E</color>
+    <color name="redLastFm">#c9212a</color>
+    <color name="redLastFmLight">#DD0712</color>
+
+
+
 </resources>
