--- a/app/src/main/res/layout/artist_collection_list_fragment.xml
+++ b/app/src/main/res/layout/artist_collection_list_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.view.ArtistCollectionListFragment"
-    android:background="@color/orangeLight">
+    android:background="@color/white">
 
     <com.ari.singersapp.ui.component.CustomSearchView
         android:id="@+id/customViewSearch"
