--- a/app/src/main/res/layout/artist_detail_fragment.xml
+++ b/app/src/main/res/layout/artist_detail_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:padding="10dp"
-        android:background="@drawable/bg_orange_light_round_corners"
+        android:background="@drawable/bg_round_corners_with_red_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -34,7 +34,7 @@
         android:id="@+id/RelativeLayoutArtist"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/bg_white_round_corners"
         app:layout_constraintTop_toBottomOf="@+id/textViewName"
         app:layout_constraintStart_toStartOf="parent">
@@ -53,12 +53,11 @@
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="180dp"
         android:scrollbars="none"
         app:layout_constraintStart_toEndOf="@+id/RelativeLayoutArtist"
-        app:layout_constraintTop_toBottomOf="@+id/textViewName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/RelativeLayoutArtist">
+        app:layout_constraintTop_toTopOf="@+id/RelativeLayoutArtist"
+        app:layout_constraintEnd_toEndOf="parent">
 
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -66,7 +65,6 @@
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:padding="5dp"
             android:textAlignment="textStart"
             android:background="@drawable/bg_white_round_corners"
@@ -80,7 +78,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/bg_grey_round_corners"
+        android:background="@drawable/bg_round_corners_with_black_border"
         android:orientation="vertical"
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@+id/clContainer"
@@ -112,7 +110,7 @@
     </LinearLayout>
 
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonOpenUrl"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
