--- a/app/src/main/res/layout/view_custom_search.xml
+++ b/app/src/main/res/layout/view_custom_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="@color/orangeLight">
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -39,12 +39,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:visibility="gone"
-            app:tint="@color/orange" />
+            app:tint="@color/redLastFm" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSearch"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
